--- a/ConjuntosClasicos/ConjuntosClasicos.csproj
+++ b/ConjuntosClasicos/ConjuntosClasicos.csproj
@@ -56,6 +56,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transversal\Archivo.cs" />
+    <Compile Include="Transversal\Enum\TipoComponenteLexico.cs" />
+    <Compile Include="Transversal\Enum\TipoError.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -78,5 +81,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
